[gd_scene load_steps=17 format=3 uid="uid://dlgyuiju8rxrt"]

[ext_resource type="Script" path="res://Bat/World.gd" id="1_43sdk"]
[ext_resource type="Script" path="res://Bat/Player.gd" id="2_ws7kp"]
[ext_resource type="AudioStream" uid="uid://dya0xeim1e2v1" path="res://Bat/Assets/chirp_01.wav" id="3_h0ab8"]
[ext_resource type="PackedScene" uid="uid://dysuexydysmyd" path="res://Bat/Entities/CavePrefab.tscn" id="4_otgmk"]
[ext_resource type="Material" uid="uid://cekxlpdi3spup" path="res://Bat/Materials/echo_material.tres" id="5_70f0e"]
[ext_resource type="PackedScene" uid="uid://58kimrwoi6ok" path="res://Bat/Entities/Spider.tscn" id="6_r22hk"]
[ext_resource type="PackedScene" uid="uid://buitwqulmna1b" path="res://Bat/Entities/Moth.tscn" id="7_2n2hq"]
[ext_resource type="PackedScene" uid="uid://rah6xn4jfbkt" path="res://Bat/Entities/mushroom_1.tscn" id="8_4ick3"]
[ext_resource type="PackedScene" uid="uid://cqecn7x6fkpeu" path="res://Bat/Entities/Rock1.tscn" id="9_aftvl"]
[ext_resource type="PackedScene" uid="uid://b5730mevyff1o" path="res://Bat/Entities/Rock2.tscn" id="10_llx2p"]
[ext_resource type="PackedScene" uid="uid://sbpjo1phb1fo" path="res://Bat/Entities/Rock3.tscn" id="11_8ue56"]
[ext_resource type="PackedScene" uid="uid://b5nyq23o20w1g" path="res://Bat/Entities/Tree.tscn" id="12_rupgw"]

[sub_resource type="Environment" id="Environment_hrfn1"]
background_mode = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_n3yu1"]
radius = 0.55

[sub_resource type="BoxMesh" id="BoxMesh_qfrjk"]
material = ExtResource("5_70f0e")

[sub_resource type="Theme" id="Theme_3g43t"]
default_font_size = 28

[node name="World" type="Node3D"]
script = ExtResource("1_43sdk")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hrfn1")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.00872656, 0, 0.999962, 0, 1, 0, -0.999962, 0, 0.00872656, 1.78527, 0.611678, -0.498643)
script = ExtResource("2_ws7kp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00291681, 0.0225421, -0.334235)
shape = SubResource("SphereShape3D_n3yu1")

[node name="CameraRod" type="Node3D" parent="Player"]

[node name="MainCamera" type="Camera3D" parent="Player/CameraRod"]
current = true
near = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("3_h0ab8")
volume_db = -23.066
pitch_scale = 2.0

[node name="caves_02" parent="." instance=ExtResource("4_otgmk")]
transform = Transform3D(0.618363, 0, -5.63533, 0, 5.66916, 0, 5.63533, 0, 0.618363, 0, 0, 0)

[node name="Water1" type="MeshInstance3D" parent="."]
transform = Transform3D(8.538, 0, 0, 0, 0.95, 0, 0, 0, 8.715, 0, -5.471, 0)
mesh = SubResource("BoxMesh_qfrjk")

[node name="DebugDirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.841067, 0.00932724, 0.54085, -0.54093, 0.0145025, 0.840942, 0, -0.999851, 0.017243, 0, 0, 0)

[node name="spider" parent="." instance=ExtResource("6_r22hk")]
transform = Transform3D(0.168417, 0.533827, -0.0162745, 0.0014719, -0.0175284, -0.559724, -0.534073, 0.168291, -0.00667466, -4.68849, 0.961597, -2.14009)

[node name="spider2" parent="." instance=ExtResource("6_r22hk")]
transform = Transform3D(0.229911, 0.968416, 0.096497, 0.0328573, 0.0913727, -0.995274, -0.972657, 0.231995, -0.0108121, -23.522, 2.128, -3.22135)

[node name="spider3" parent="." instance=ExtResource("6_r22hk")]
transform = Transform3D(0.678549, -0.307943, 0.0773098, 0.295604, 0.546174, -0.418983, 0.115861, 0.409999, 0.616207, -17.2589, 0.215157, -5.93831)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ControlsInfo" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 102.0
theme = SubResource("Theme_3g43t")
text = "WASD: move
F: toggle debug
Space: fly up
Control: fly down
LMB: chirp
Alt-1: teleport to start
Alt-2: teleport outside"
fit_content = true

[node name="StartingPoint" type="Marker3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.15815, 0.643629, -0.189201)

[node name="Outside" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -39.4671, 17.0423, 23.8333)

[node name="TestMoths" type="Node3D" parent="."]

[node name="Moth" parent="TestMoths" instance=ExtResource("7_2n2hq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.5472, 18.0755, 28.3226)
gravity_scale = 0.0
base_speed = 6.0
direction_change_interval = 0.6

[node name="Moth2" parent="TestMoths" instance=ExtResource("7_2n2hq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.949, 19.5014, 35.0887)
gravity_scale = 0.0
base_speed = 6.0
direction_change_interval = 0.6

[node name="Moth3" parent="TestMoths" instance=ExtResource("7_2n2hq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.3469, 20.1305, 23.7653)
gravity_scale = 0.0
base_speed = 6.0
direction_change_interval = 0.6

[node name="Moth4" parent="TestMoths" instance=ExtResource("7_2n2hq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.9527, 19.9208, 39.3245)
gravity_scale = 0.0
base_speed = 6.0
direction_change_interval = 0.6

[node name="mushroom_1_type" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -11.5656, -2.15416, -0.135662)

[node name="mushroom_1_type2" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -11.7819, -2.32283, 0.257654)

[node name="mushroom_1_type3" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -20.3547, -1.94657, -4.25126)

[node name="mushroom_1_type4" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -20.5077, -1.77633, -3.70134)

[node name="mushroom_1_type5" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -21.2892, -0.681808, -8.00877)

[node name="mushroom_1_type_big_daddy_chungus" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.6679, 2.16719, 4.48743)

[node name="mushroom_1_type6" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -45.1558, 10.1027, 7.34414)

[node name="mushroom_1_type8" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -45.0758, 10.0274, 6.9768)

[node name="mushroom_1_type7" parent="." instance=ExtResource("8_4ick3")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -45.2189, 9.68905, 6.45228)

[node name="Rocks" type="Node3D" parent="."]

[node name="Rock1" parent="Rocks" instance=ExtResource("9_aftvl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -44.8109, 17.7831, 41.9091)

[node name="Rock17" parent="Rocks" instance=ExtResource("9_aftvl")]
transform = Transform3D(-0.457125, -1.89889, 0.931176, 1.34437, -0.996334, -1.3718, 1.63265, 0.288739, 1.3903, -26.2262, 15.2461, 34.7841)

[node name="Rock9" parent="Rocks" instance=ExtResource("9_aftvl")]
transform = Transform3D(-2.7958, -0.351596, 0.189275, -0.3651, 2.79298, -0.204715, -0.161698, -0.227127, -2.81037, -21.3707, 14.2232, 87.6884)

[node name="Rock4" parent="Rocks" instance=ExtResource("9_aftvl")]
transform = Transform3D(2.1101, 0, 0, 0, 2.1101, 0, 0, 0, 2.1101, -4.53452, 17.3536, 42.6901)

[node name="Rock5" parent="Rocks" instance=ExtResource("9_aftvl")]
transform = Transform3D(1.17051, -1.68113, 0.506172, -0.969617, -1.12616, -1.49804, 1.46364, 0.5984, -1.3972, -5.74525, 15.4666, 45.2791)

[node name="Rock2" parent="Rocks" instance=ExtResource("10_llx2p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.0733, 17.2776, 44.9344)

[node name="Rock14" parent="Rocks" instance=ExtResource("10_llx2p")]
transform = Transform3D(0.872514, 0.412135, 0.262419, 0.232338, 0.122501, -0.96489, -0.429811, 0.90285, 0.0111287, -26.8391, 18.2111, 56.3348)

[node name="Rock15" parent="Rocks" instance=ExtResource("10_llx2p")]
transform = Transform3D(-0.134199, 0.186146, 0.797058, 0.58588, 0.406219, 0.0217839, -0.357259, 0.596247, -0.263679, -33.8302, 13.6514, 85.3229)

[node name="Rock16" parent="Rocks" instance=ExtResource("10_llx2p")]
transform = Transform3D(0.634045, 0.302302, -0.0961549, 0.275713, -0.679803, -0.0923962, -0.104251, 0.0406954, -0.829168, -50.5322, 14.6666, 63.4236)

[node name="Rock6" parent="Rocks" instance=ExtResource("10_llx2p")]
transform = Transform3D(-1.01384, 1.29688, -0.466948, 0.894481, 1.06004, 1.00201, 1.04874, 0.349606, -1.30604, -56.8476, 12.1301, 83.7567)

[node name="Rock3" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(1.71504, 0, 0, 0, 1.71504, 0, 0, 0, 1.71504, -47.1126, 18.2984, 41.5094)

[node name="Rock18" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.101169, 1.65776, 0.427744, -1.65062, 0.208198, -0.416488, -0.454504, -0.387109, 1.60777, -23.8552, 15.3873, 34.7736)

[node name="Rock19" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.489434, 0.826058, -0.366077, 0.179788, 0.646769, 0.540981, 0.947574, -0.549384, 0.0864405, -42.9052, 15.5416, 30.7833)

[node name="Rock7" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.0197855, 0.330662, 1.68275, 0.85628, -1.45997, 0.276819, 1.48585, 0.836963, -0.181934, -62.643, 12.5358, 85.9646)

[node name="Rock13" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.0162117, 0.30692, 1.90182, 0.701609, -1.35515, 0.312857, 1.21746, 0.776869, -0.20562, -44.6676, 14.1627, 114.635)

[node name="Rock10" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.375164, 0.0683112, 2.30597, 0.894611, -2.15776, -0.0816251, 2.12647, 0.895726, -0.372493, -19.4518, 14.1416, 86.3444)

[node name="Rock11" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.596056, 0.0874187, 0.810692, -0.00844231, 0.492268, -0.187942, -1.03626, 0.0462729, 0.467842, -17.5301, 14.8243, 87.9787)

[node name="Rock12" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(5.90762, -0.121927, -0.558968, 0.228974, 4.06013, 0.0721274, 1.38041, -0.151667, 2.38021, -38.4172, 14.3779, 112.011)

[node name="Rock8" parent="Rocks" instance=ExtResource("11_8ue56")]
transform = Transform3D(0.612923, -0.222687, 0.0966553, 0.265245, 0.555229, -0.136742, -0.0504155, 0.213862, 0.455653, -58.4295, 12.4399, 87.4577)

[node name="Trees" type="Node3D" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource("12_rupgw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.928, 18.0895, 37.4326)

[node name="Tree2" parent="Trees" instance=ExtResource("12_rupgw")]
transform = Transform3D(-0.162229, -3.92111e-08, -0.897047, 3.92111e-08, 0.911598, -4.69384e-08, 0.897047, -4.69384e-08, -0.162229, -14.7187, 15.5099, 37.8023)

[node name="Tree3" parent="Trees" instance=ExtResource("12_rupgw")]
transform = Transform3D(-0.88023, -1.03629e-08, -0.237076, 1.03629e-08, 0.911598, -7.83233e-08, 0.237076, -7.83233e-08, -0.88023, -2.85453, 16.0055, 65.296)

[node name="Tree4" parent="Trees" instance=ExtResource("12_rupgw")]
transform = Transform3D(-1.19882, -1.41136e-08, -0.322882, 1.41136e-08, 1.24154, -1.06671e-07, 0.322882, -1.06671e-07, -1.19882, -56.5525, 11.597, 77.3195)

[node name="Tree5" parent="Trees" instance=ExtResource("12_rupgw")]
transform = Transform3D(-0.283949, 5.28309e-08, 1.20863, -5.28309e-08, 1.24154, -6.66812e-08, -1.20863, -6.66812e-08, -0.283949, -29.3695, 18.3376, 57.5745)
